<resources>
    <string name="app_name">MyPremierLeague</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="text_number">0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_league">League</string>
    <string name="menu_standings">Standings</string>
    <string name="menu_match_results">Match Results</string>

    <string name="position">Pos</string>
    <string name="club">Club</string>
    <string name="played">Pl</string>
    <string name="won">W</string>
    <string name="draw">D</string>
    <string name="lost">L</string>
    <string name="goals_for">Gf</string>
    <string name="goals_against">Ga</string>
    <string name="goals_difference">Gd</string>
    <string name="points">Pt</string>
    <string name="versus">V</string>
    <string name="match_week">Match week %1$d</string>
    <string name="official_website">Official Website : </string>
    <string name="location">Location : </string>
    <string name="capacity">Capacity : </string>
    <string name="status">Status</string>

    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>