<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Dark"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_standing_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/position"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_club"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/club"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_played"
            app:layout_constraintStart_toEndOf="@+id/tv_standing_position"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_played"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/played"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_won"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_won"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/won"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_drawn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_drawn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/draw"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_lost"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_lost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lost"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_goals_for"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_goals_for"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/goals_for"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_goals_against"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_goals_against"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/goals_against"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_goals_difference"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_goals_difference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/goals_difference"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_standing_points"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_standing_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/points"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>